syntax = "proto3";

package services.rector;

import "resources/laws/laws.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/services/rector;rector";

message CreateOrUpdateLawBookRequest {
  resources.laws.LawBook lawBook = 1 [(validate.rules).message.required = true];
}

message CreateOrUpdateLawBookResponse {
  resources.laws.LawBook lawBook = 1;
}

message DeleteLawBookRequest {
  uint64 id = 1;
}
message DeleteLawBookResponse {}

message CreateOrUpdateLawRequest {
  resources.laws.Law law = 1 [(validate.rules).message.required = true];
}

message CreateOrUpdateLawResponse {
  resources.laws.Law law = 1;
}

message DeleteLawRequest {
  uint64 id = 1;
}

message DeleteLawResponse {}

service RectorLawsService {
  // @perm
  rpc CreateOrUpdateLawBook(CreateOrUpdateLawBookRequest) returns (CreateOrUpdateLawBookResponse);
  // @perm
  rpc DeleteLawBook(DeleteLawBookRequest) returns (DeleteLawBookResponse);
  // @perm: Name=CreateOrUpdateLawBook
  rpc CreateOrUpdateLaw(CreateOrUpdateLawRequest) returns (CreateOrUpdateLawResponse);
  // @perm: Name=DeleteLawBook
  rpc DeleteLaw(DeleteLawRequest) returns (DeleteLawResponse);
}
